--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,20 +3,24 @@
 security:
     encoders:
         FC\UserBundle\Entity\User: sha512
-
+    
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        db_users_provider:
+            entity: {class: UserBundle:User}
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        main:
+        secured_area:
+            pattern: ^/
+            form_login:
+                check_path: /login_check
+                login_path: /login
+            logout:
+                path: /logout
+                target: /
             anonymous: ~
+
             # activate different ways to authenticate
 
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
