--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
 user:
-    resource: "@UserBundle/Resources/config/routing.yml"
+    resource: "@UserBundle/Controller"
     prefix:   /
+    type: annotation
