--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
         "symfony/symfony": "2.8.*",
         "twig/twig": "^1.0||^2.0",
-        "doctrine/doctrine-fixtures-bundle": "2.2.*"
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+        "stof/doctrine-extensions-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
