create twig custom extension service container

--- a/src/FC/CatalogBundle/Resources/config/services.yml
+++ b/src/FC/CatalogBundle/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
-#    catalog.example:
-#        class: FC\CatalogBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+  fc_catalog.twig.catalog_extension:
+    class: FC\CatalogBundle\Twig\CatalogExtension
+    arguments: []
+    tags:
+      - { name: twig.extension }
+    public: false
