--- a/src/FC/UserBundle/Resources/config/services.yml
+++ b/src/FC/UserBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    user.example:
-#        class: FC\UserBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+  fc_user.listener.user_listener:
+    class: FC\UserBundle\Listener\UserListener
+    tags:
+      - { name: doctrine.event_listener, event: prePersist }
